# polymarket-ai-trader

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SPECS.md  alembic.ini  charter.md  docker-compose.yml  policy.calibration.yaml  policy.yaml  pyproject.toml
structured/: .env.example  AGENTS.md  CLAUDE.md  Dockerfile  README.md  SPECS.md  docker-compose.yml  policy.yaml  pyproject.toml
structured/src/app/: main.py  scheduler.py
structured/src/config/: categories.py  policy.py  settings.py
structured/src/contracts/: __init__.py  base.py  crypto.py  earnings.py  macro.py  registry.py  weather.py
structured/src/db/: models.py  repository.py  session.py
structured/src/engines/: base.py  crypto.py  earnings.py  macro.py  weather.py
structured/src/evaluation/: calibration.py  kill_switch.py  replay.py
structured/src/polymarket/: schemas.py
structured/src/portfolio/: lifecycle.py  risk_manager.py  sizing.py
structured/src/sources/: awc.py  base.py  binance.py  bls.py  coinbase.py  edgar.py  exchange_router.py  fred.py  geocoder.py  kraken.py  nws.py  release_calendar.py  ticker_resolver.py
structured/src/trading/: crypto_pipeline.py  date_resolver.py  earnings_pipeline.py  macro_pipeline.py  weather_pipeline.py
structured/tests/: test_calibration.py  test_config.py  test_contracts.py  test_crypto_engine.py  test_crypto_safety.py  test_db.py  test_earnings_engine.py  test_lifecycle_structured.py  test_macro_engine.py  test_pipeline_entry_guard.py  test_polymarket.py  test_portfolio.py  test_scheduler.py  test_weather_engine.py
tests/: test_aggregation.py  test_attribution.py  test_budget.py  test_candidate_selector.py  test_config.py  test_connectivity.py  test_evidence.py  test_execution.py  test_llm.py  test_main.py  test_metrics.py  test_online_scorer.py  test_packets.py  test_portfolio.py  test_reports.py  test_scorer.py  (+3 more)
(+47 files in other folders)
